[tool.poetry]
name = "vqe-in-dft"
version = "0.0.1"
description = ""
authors = ["Michael Williams <michael.williams.20@ucl.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.7"
pyscf = "=1.7.6.post1"
openfermion = "<1.1.0"
PennyLane = "^0.17.0"
PennyLane-Qchem = "^0.17.0"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
flake8 = "^3.9.2"
pydocstyle = "^6.1.1"
pytest = "^6.2.4"
mypy = "^0.902"
bpython = "^0.21"
isort = "^5.9.3"
poetry2conda = "^0.3.0"
types-PyYAML = "^5.4.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
nbed = "vqe_in_dft.embed:cli"

[tool.poetry2conda]
name = "nbed"

[tool.poetry2conda.dependencies]
pyscf = { channel = "pip" }
openfermion = { channel = "pip" }
PennyLane = { channel = "pip" }
PennyLane-Qchem = { channel = "pip" }
